@@ -40,6 +40,8 @@ Trunk (unreleased changes)
     HDFS-1638. Federation: DataNode.handleDiskError needs to inform 
     ALL namenodes if a disk failed (boryas)
 
+    HDFS-1442. Api to get delegation token in Hdfs class. (jitendra)
+
     HDFS-1647. Federation: Multiple namenode configuration. (jitendra)
 
     HDFS-1639. Federation: Add block pool management to FSDataset. (suresh)
